--- a/package.json
+++ b/package.json
@@ -65,25 +65,23 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.5",
-    "@types/redux-logger": "^3.0.8",
     "@types/uuid": "^8.3.0",
-    "eslint-config-airbnb-typescript": "^10.0.0",
-    "redux-logger": "^3.0.6"
+    "eslint-config-airbnb-typescript": "^10.0.0"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/redux-logger": "^3.0.8",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.48",
-    "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
+    "redux-logger": "^3.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "next",
     "typescript": "^3.8.3",
     "uuid": "^8.3.0"
